crates/ars-components/src/selection/menu/snapshots/ars_components__selection__menu__tests__menu_radio_checked.snap
---
source: crates/ars-components/src/selection/menu/mod.rs
expression: "snapshot_attrs(&api.radio_item_attrs(&key(\"charlie\"), &key(\"density\")))"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "radio-item",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "menu",
            ),
        ),
        (
            Aria(
                Checked,
            ),
            String(
                "true",
            ),
        ),
        (
            Id,
            String(
                "menu-item-charlie",
            ),
        ),
        (
            Role,
            String(
                "menuitemradio",
            ),
        ),
        (
            TabIndex,
            String(
                "-1",
            ),
        ),
    ],
    styles: [],
}
