crates/ars-components/src/selection/menu/snapshots/ars_components__selection__menu__tests__menu_radio_unchecked.snap
---
source: crates/ars-components/src/selection/menu/mod.rs
expression: "snapshot_attrs(&api.radio_item_attrs(&key(\"alpha\"), &key(\"density\")))"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-highlighted",
            ),
            Bool(
                true,
            ),
        ),
        (
            Data(
                "ars-part",
            ),
            String(
                "radio-item",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "menu",
            ),
        ),
        (
            Aria(
                Checked,
            ),
            String(
                "false",
            ),
        ),
        (
            Id,
            String(
                "menu-item-alpha",
            ),
        ),
        (
            Role,
            String(
                "menuitemradio",
            ),
        ),
        (
            TabIndex,
            String(
                "0",
            ),
        ),
    ],
    styles: [],
}
