crates/ars-components/src/selection/menu/snapshots/ars_components__selection__menu__tests__menu_root_default.snap
---
source: crates/ars-components/src/selection/menu/mod.rs
expression: "snapshot_attrs(&service(Props::new().id(\"menu\")).connect(&|_|\n{}).root_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "root",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "menu",
            ),
        ),
    ],
    styles: [],
}
