crates/ars-components/src/selection/menu/snapshots/ars_components__selection__menu__tests__menu_root_disabled.snap
---
source: crates/ars-components/src/selection/menu/mod.rs
expression: snapshot_attrs(&api.root_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-disabled",
            ),
            Bool(
                true,
            ),
        ),
        (
            Data(
                "ars-part",
            ),
            String(
                "root",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "menu",
            ),
        ),
    ],
    styles: [],
}
