crates/ars-components/src/selection/menu/snapshots/ars_components__selection__menu__tests__menu_separator.snap
---
source: crates/ars-components/src/selection/menu/mod.rs
expression: snapshot_attrs(&api.separator_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "separator",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "menu",
            ),
        ),
        (
            Role,
            String(
                "separator",
            ),
        ),
    ],
    styles: [],
}
