crates/ars-components/src/selection/menu/snapshots/ars_components__selection__menu__tests__menu_sub_content.snap
---
source: crates/ars-components/src/selection/menu/mod.rs
expression: "snapshot_attrs(&api.sub_content_attrs(&key(\"delta\")))"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "sub-content",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "menu",
            ),
        ),
        (
            Aria(
                LabelledBy,
            ),
            String(
                "menu-item-delta",
            ),
        ),
        (
            Id,
            String(
                "menu-sub-content-delta",
            ),
        ),
        (
            Role,
            String(
                "menu",
            ),
        ),
        (
            TabIndex,
            String(
                "-1",
            ),
        ),
    ],
    styles: [],
}
