crates/ars-components/src/selection/menu/snapshots/ars_components__selection__menu__tests__menu_sub_trigger_open.snap
---
source: crates/ars-components/src/selection/menu/mod.rs
expression: "snapshot_attrs(&api.sub_trigger_attrs(&key(\"delta\")))"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-highlighted",
            ),
            Bool(
                true,
            ),
        ),
        (
            Data(
                "ars-part",
            ),
            String(
                "sub-trigger",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "menu",
            ),
        ),
        (
            Aria(
                Expanded,
            ),
            String(
                "true",
            ),
        ),
        (
            Aria(
                HasPopup,
            ),
            String(
                "menu",
            ),
        ),
        (
            Aria(
                Controls,
            ),
            String(
                "menu-sub-content-delta",
            ),
        ),
        (
            Id,
            String(
                "menu-item-delta",
            ),
        ),
        (
            Role,
            String(
                "menuitem",
            ),
        ),
        (
            TabIndex,
            String(
                "0",
            ),
        ),
    ],
    styles: [],
}
